# rustecal

./: .pre-commit-config.yaml  404.html  Cargo.toml  README.md  about.html  index.html  print.html  project_status.html  project_structure.html  searcher-c2a407aa.js  searchindex-0ea462b4.js  searchindex.js  toc-44c08b21.js  toc.html  toc.js
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  generate-docs.yml
api/: ecal.html  index.html  message_types.html  publisher.html  service_client.html  service_server.html  subscriber.html  zero_copy_messaging.html
docs/: book.toml
docs/src/api/: service_client.md  service_server.md  (+1 more)
examples/: binary.html  index.html  json.html  logging.html  monitoring.html  protobuf.html  service_client.html  service_server.html  string.html
rustecal/: Cargo.toml
rustecal-core/: Cargo.toml
rustecal-core/src/: components.rs  core.rs
rustecal-pubsub/: Cargo.toml
rustecal-pubsub/src/: publisher.rs  typed_publisher.rs  typed_subscriber.rs
rustecal-service/: Cargo.toml
rustecal-service/src/: types.rs
rustecal-sys/: Cargo.toml  build.rs
rustecal-types-bytes/: Cargo.toml
rustecal-types-protobuf/: Cargo.toml  build.rs
rustecal-types-protobuf/src/: lib.rs
rustecal-types-protobuf/test-rustecal-types-protobuf/: Cargo.toml  build.rs
rustecal-types-serde/: Cargo.toml
rustecal-types-serde/src/: cbor_message.rs  json_message.rs  lib.rs  msgpack_message.rs
rustecal-types-string/: Cargo.toml
rustecal-types-string/src/: lib.rs
setup/: ecal_installation.html  getting_started.html
types/: message_types.html
(+19 files in other folders)
