[package]
name = "rustecal-types-serde"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustecal-core = { path = "../rustecal-core" }
rustecal-pubsub = { path = "../rustecal-pubsub" }

[features]
# Optional support for other formats
default = ["json"]
json = []
